--- a/package.json
+++ b/package.json
@@ -5,17 +5,27 @@
   "main": "dist/index.js",
   "jsnext:main": "dist/index.es.js",
   "author": "Dmitriy A. Nesterkin",
-  "license": "ISC",
+  "license": "GPLv3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aptivator/rollup-plugin-underscorify.git"
+  },
+  "bugs": {
+    "url": "https://github.com/aptivator/rollup-plugin-underscorify/issues"
+  },
   "dependencies": {
     "rollup-pluginutils": "^2.0.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "buble": "^0.15.2",
+    "mocha": "^3.2.0",
     "rollup": "^0.41.5",
     "rollup-plugin-buble": "^0.15.0"
   },
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "mocha tests/*.js --compilers js:buble/register"
   }
 }
